exports[`test ComponentFilter does not wrap its child if its wrap attribute is false. 1`] = `
<div
  id="child" />
`;

exports[`test ComponentFilter is not rendered when rendered is false 1`] = `
<div
  id="container" />
`;

exports[`test ComponentFilter renders itself and its children when rendered is true 1`] = `
<div
  id="container">
  <div>
    <div
      id="child" />
  </div>
</div>
`;
